--- a/gopages/pkg/github.com/johnstarich/go/gopages/cmd/watch/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/cmd/watch/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.16.15";</script>
+<script>var goVersion = "go1.19.3";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer></script>
 
 </head>
@@ -71,13 +71,9 @@
 
 	
 		
-		<p>
-Command watch generates docs and starts an HTTP endpoint to serve them. Also runs a file watcher on the current module to regenerate docs on change events.
-</p>
-<p>
-watch is useful for testing godoc code comments and while developing on gopages itself.
+		<p>Command watch generates docs and starts an HTTP endpoint to serve them. Also runs a file watcher on the current module to regenerate docs on change events.
+<p>watch is useful for testing godoc code comments and while developing on gopages itself.
 Accepts the same flags as gopages, -gh-pages flags are ignored.
-</p>
 
 	
 
@@ -90,7 +86,7 @@ Accepts the same flags as gopages, -gh-pages flags are ignored.
 
 
 <div id="footer">
-Build version go1.16.15.<br>
+Build version go1.19.3.<br>
 </div>
 
 </div><!-- .container -->
