--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.16.15";</script>
+<script>var goVersion = "go1.19.3";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer></script>
 
 </head>
@@ -91,9 +91,7 @@
 			</div>
 			<div class="expanded">
 				<h2 class="toggleButton" title="Click to hide Overview section">Overview ▾</h2>
-				<p>
-Package generate generates documentation pages for a given package.
-</p>
+				<p>Package generate generates documentation pages for a given package.
 
 				
 			</div>
@@ -152,9 +150,7 @@ Package generate generates documentation pages for a given package.
 				
 			</h2>
 			<pre>func Docs(modulePath, modulePackage <a href="https://pkg.go.dev/builtin/#string">string</a>, src, fs billy.<a href="#Filesystem">Filesystem</a>, args <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/">flags</a>.<a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags/#Args">Args</a>, linker <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/">source</a>.<a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/generate/source/#Linker">Linker</a>) <a href="https://pkg.go.dev/builtin/#error">error</a></pre>
-			<p>
-Docs generates documentation pages for the given package
-</p>
+			<p>Docs generates documentation pages for the given package
 
 			
 			
@@ -193,7 +189,7 @@ Docs generates documentation pages for the given package
 
 
 <div id="footer">
-Build version go1.16.15.<br>
+Build version go1.19.3.<br>
 </div>
 
 </div><!-- .container -->
