--- a/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/internal/module/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.16.15";</script>
+<script>var goVersion = "go1.19.3";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer></script>
 
 </head>
@@ -89,9 +89,7 @@
 			</div>
 			<div class="expanded">
 				<h2 class="toggleButton" title="Click to hide Overview section">Overview ▾</h2>
-				<p>
-Package module finds a module&#39;s package path for a given file path.
-</p>
+				<p>Package module finds a module&apos;s package path for a given file path.
 
 				
 			</div>
@@ -146,9 +144,7 @@ Package module finds a module&#39;s package path for a given file path.
 				
 			</h2>
 			<pre>func Package(modulePath <a href="https://pkg.go.dev/builtin/#string">string</a>) (<a href="https://pkg.go.dev/builtin/#string">string</a>, <a href="https://pkg.go.dev/builtin/#error">error</a>)</pre>
-			<p>
-Package returns a module&#39;s package path for the given module file path
-</p>
+			<p>Package returns a module&apos;s package path for the given module file path
 
 			
 			
@@ -166,7 +162,7 @@ Package returns a module&#39;s package path for the given module file path
 
 
 <div id="footer">
-Build version go1.16.15.<br>
+Build version go1.19.3.<br>
 </div>
 
 </div><!-- .container -->
