--- a/gopages/pkg/github.com/johnstarich/go/gopages/cmd/gendoc/index.html
+++ b/gopages/pkg/github.com/johnstarich/go/gopages/cmd/gendoc/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.16.15";</script>
+<script>var goVersion = "go1.19.3";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer></script>
 
 </head>
@@ -71,9 +71,7 @@
 
 	
 		
-		<p>
-Command gendoc generates the root package&#39;s documentation.
-</p>
+		<p>Command gendoc generates the root package&apos;s documentation.
 
 	
 
@@ -86,7 +84,7 @@ Command gendoc generates the root package&#39;s documentation.
 
 
 <div id="footer">
-Build version go1.16.15.<br>
+Build version go1.19.3.<br>
 </div>
 
 </div><!-- .container -->
