--- a/gopages/pkg/github.com/johnstarich/index.html
+++ b/gopages/pkg/github.com/johnstarich/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.16.15";</script>
+<script>var goVersion = "go1.19.3";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer></script>
 
 </head>
@@ -102,7 +102,7 @@
 					</td>
 				
 					<td class="pkg-synopsis">
-						gopages generates static files for Go documentation, formatted with godoc.
+						Command gopages generates static files for Go documentation, formatted with godoc.
 					</td>
 				</tr>
 			
@@ -145,7 +145,7 @@
 
 
 <div id="footer">
-Build version go1.16.15.<br>
+Build version go1.19.3.<br>
 </div>
 
 </div><!-- .container -->
