--- a/plist/pkg/github.com/johnstarich/go/plist/index.html
+++ b/plist/pkg/github.com/johnstarich/go/plist/index.html
@@ -15,7 +15,7 @@
 
 
 
-<script>var goVersion = "go1.16.15";</script>
+<script>var goVersion = "go1.19.3";</script>
 <script src="/go/plist/lib/godoc/godocs.js" defer></script>
 
 </head>
@@ -89,9 +89,7 @@
 			</div>
 			<div class="expanded">
 				<h2 class="toggleButton" title="Click to hide Overview section">Overview ▾</h2>
-				<p>
-Package plist parses XML *.plist files and transforms them into easier-to-use formats.
-</p>
+				<p>Package plist parses XML *.plist files and transforms them into easier-to-use formats.
 
 				
 			</div>
@@ -146,20 +144,14 @@ Package plist parses XML *.plist files and transforms them into easier-to-use fo
 				
 			</h2>
 			<pre>func ToJSON(r <a href="https://pkg.go.dev/io/">io</a>.<a href="https://pkg.go.dev/io/#Reader">Reader</a>) ([]<a href="https://pkg.go.dev/builtin/#byte">byte</a>, <a href="https://pkg.go.dev/builtin/#error">error</a>)</pre>
-			<p>
-ToJSON decodes &#39;r&#39; containing an XML plist and returns the value as JSON-encoded bytes.
-</p>
-<p>
-For example, the following XML:
-</p>
+			<p>ToJSON decodes &apos;r&apos; containing an XML plist and returns the value as JSON-encoded bytes.
+<p>For example, the following XML:
 <pre>&lt;array&gt;
 	&lt;integer&gt;1&lt;/integer&gt;
 	&lt;string&gt;foo&lt;/string&gt;
 &lt;/array&gt;
 </pre>
-<p>
-is returned as `[1, &#34;foo&#34;]`.
-</p>
+<p>is returned as `[1, &quot;foo&quot;]`.
 
 			
 			
@@ -177,7 +169,7 @@ is returned as `[1, &#34;foo&#34;]`.
 
 
 <div id="footer">
-Build version go1.16.15.<br>
+Build version go1.19.3.<br>
 </div>
 
 </div><!-- .container -->
