--- a/goop/index.html
+++ b/goop/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <script>
-window.location = "pkg/github.com/johnstarich/go/goop"
+window.location = "pkg/github.com/johnstarich/go/goop/"
 </script>
 </head>
 <body>
-	<a href="pkg/github.com/johnstarich/go/goop">Click here to see this module's documentation.</a>
+	<a href="pkg/github.com/johnstarich/go/goop/">Click here to see this module's documentation.</a>
 </body>
 </html>
