--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go.html
@@ -13,7 +13,7 @@
 
 
 
-<script>var goVersion = "go1.19.3";</script>
+<script>var goVersion = "go1.19.5";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 
 </head>
@@ -215,7 +215,7 @@
 <span id="L158" class="ln">   158  </span>	}).
 <span id="L159" class="ln">   159  </span>	Append(func(args docsArgs) (docsArgs, error) {
 <span id="L160" class="ln">   160  </span>		<span class="comment">// Generate main index to redirect to actual content page. Important to separate from &#39;lib&#39; top-level dir.</span>
-<span id="L161" class="ln">   161  </span>		return args, util.WriteFile(args.FS, filepath.Join(args.OutputPath, &#34;index.html&#34;), []byte(redirect(&#34;pkg/&#34;+args.ModulePackage)), scrapeFilePermission)
+<span id="L161" class="ln">   161  </span>		return args, util.WriteFile(args.FS, filepath.Join(args.OutputPath, &#34;index.html&#34;), []byte(redirect(&#34;pkg/&#34;+args.ModulePackage+&#34;/&#34;)), scrapeFilePermission)
 <span id="L162" class="ln">   162  </span>	}).
 <span id="L163" class="ln">   163  </span>	Append(func(args docsArgs) (docsArgs, []byte, error) {
 <span id="L164" class="ln">   164  </span>		<span class="comment">// Generate a custom 404 page as a catch-all</span>
@@ -584,7 +584,7 @@
 </pre><p></p>
 
 <div id="footer">
-Build version go1.19.3.<br/>
+Build version go1.19.5.<br/>
 </div>
 
 </div><!-- .container -->
