--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/template_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/template_test.go.html
@@ -13,7 +13,7 @@
 
 
 
-<script>var goVersion = "go1.19.3";</script>
+<script>var goVersion = "go1.19.5";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 
 </head>
@@ -113,10 +113,59 @@
 <span id="L56" class="ln">    56  </span>`, newHTML)
 <span id="L57" class="ln">    57  </span>}
 <span id="L58" class="ln">    58  </span>
+<span id="L59" class="ln">    59  </span>func TestCommentHTML(t *testing.T) {
+<span id="L60" class="ln">    60  </span>	t.Parallel()
+<span id="L61" class="ln">    61  </span>	htmlFunc := func(*godoc.PageInfo, string) string {
+<span id="L62" class="ln">    62  </span>		return `
+<span id="L63" class="ln">    63  </span>&lt;html&gt;
+<span id="L64" class="ln">    64  </span>&lt;body&gt;
+<span id="L65" class="ln">    65  </span>
+<span id="L66" class="ln">    66  </span>This module&#39;s package:
+<span id="L67" class="ln">    67  </span>&lt;a href=&#34;/github.com/org/repo/package/foo.go&#34;&gt;foo.go&lt;/a&gt;
+<span id="L68" class="ln">    68  </span>&lt;a href=&#34;/github.com/org/repo/package/sub-package/bar.go&#34;&gt;bar.go&lt;/a&gt;
+<span id="L69" class="ln">    69  </span>&lt;a href=&#34;/github.com/org/repo/package&#34;&gt;package&lt;/a&gt;
+<span id="L70" class="ln">    70  </span>
+<span id="L71" class="ln">    71  </span>Standard library package:
+<span id="L72" class="ln">    72  </span>&lt;a href=&#34;/os&#34;&gt;os&lt;/a&gt;
+<span id="L73" class="ln">    73  </span>&lt;a href=&#34;/os/file.go&#34;&gt;file.go&lt;/a&gt;
+<span id="L74" class="ln">    74  </span>
+<span id="L75" class="ln">    75  </span>Unrecognized package:
+<span id="L76" class="ln">    76  </span>&lt;a href=&#34;/github.com/not/my/package/foo.go&#34;&gt;foo.go&lt;/a&gt;
+<span id="L77" class="ln">    77  </span>&lt;a href=&#34;/github.com/not/my/package/sub-package/bar.go&#34;&gt;bar.go&lt;/a&gt;
+<span id="L78" class="ln">    78  </span>&lt;a href=&#34;/github.com/not/my/package&#34;&gt;package&lt;/a&gt;
+<span id="L79" class="ln">    79  </span>
+<span id="L80" class="ln">    80  </span>&lt;/body&gt;
+<span id="L81" class="ln">    81  </span>&lt;/html&gt;
+<span id="L82" class="ln">    82  </span>`
+<span id="L83" class="ln">    83  </span>	}
+<span id="L84" class="ln">    84  </span>	newHTML := commentToHTML(htmlFunc, &#34;/base&#34;, &#34;github.com/org/repo/package&#34;)(nil, &#34;&#34;)
+<span id="L85" class="ln">    85  </span>	assert.Equal(t, `
+<span id="L86" class="ln">    86  </span>&lt;html&gt;
+<span id="L87" class="ln">    87  </span>&lt;body&gt;
+<span id="L88" class="ln">    88  </span>
+<span id="L89" class="ln">    89  </span>This module&#39;s package:
+<span id="L90" class="ln">    90  </span>&lt;a href=&#34;/base/pkg/github.com/org/repo/package/foo.go&#34;&gt;foo.go&lt;/a&gt;
+<span id="L91" class="ln">    91  </span>&lt;a href=&#34;/base/pkg/github.com/org/repo/package/sub-package/bar.go&#34;&gt;bar.go&lt;/a&gt;
+<span id="L92" class="ln">    92  </span>&lt;a href=&#34;/base/pkg/github.com/org/repo/package&#34;&gt;package&lt;/a&gt;
+<span id="L93" class="ln">    93  </span>
+<span id="L94" class="ln">    94  </span>Standard library package:
+<span id="L95" class="ln">    95  </span>&lt;a href=&#34;https://pkg.go.dev/os&#34;&gt;os&lt;/a&gt;
+<span id="L96" class="ln">    96  </span>&lt;a href=&#34;https://pkg.go.dev/os/file.go&#34;&gt;file.go&lt;/a&gt;
+<span id="L97" class="ln">    97  </span>
+<span id="L98" class="ln">    98  </span>Unrecognized package:
+<span id="L99" class="ln">    99  </span>&lt;a href=&#34;https://pkg.go.dev/github.com/not/my/package/foo.go&#34;&gt;foo.go&lt;/a&gt;
+<span id="L100" class="ln">   100  </span>&lt;a href=&#34;https://pkg.go.dev/github.com/not/my/package/sub-package/bar.go&#34;&gt;bar.go&lt;/a&gt;
+<span id="L101" class="ln">   101  </span>&lt;a href=&#34;https://pkg.go.dev/github.com/not/my/package&#34;&gt;package&lt;/a&gt;
+<span id="L102" class="ln">   102  </span>
+<span id="L103" class="ln">   103  </span>&lt;/body&gt;
+<span id="L104" class="ln">   104  </span>&lt;/html&gt;
+<span id="L105" class="ln">   105  </span>`, newHTML)
+<span id="L106" class="ln">   106  </span>}
+<span id="L107" class="ln">   107  </span>
 </pre><p></p>
 
 <div id="footer">
-Build version go1.19.3.<br/>
+Build version go1.19.5.<br/>
 </div>
 
 </div><!-- .container -->
