--- a/pipe/index.html
+++ b/pipe/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <script>
-window.location = "pkg/github.com/johnstarich/go/pipe"
+window.location = "pkg/github.com/johnstarich/go/pipe/"
 </script>
 </head>
 <body>
-	<a href="pkg/github.com/johnstarich/go/pipe">Click here to see this module's documentation.</a>
+	<a href="pkg/github.com/johnstarich/go/pipe/">Click here to see this module's documentation.</a>
 </body>
 </html>
