--- a/goop/src/github.com/johnstarich/go/goop/cmd/goop/build.go.html
+++ b/goop/src/github.com/johnstarich/go/goop/cmd/goop/build.go.html
@@ -131,115 +131,117 @@
 <span id="L74" class="ln">    74  </span>		cmd := exec.CommandContext(args.Context, &#34;go&#34;, cmdArgs...)
 <span id="L75" class="ln">    75  </span>		cmd.Dir = workingDir
 <span id="L76" class="ln">    76  </span>		cmd.Env = append(os.Environ(), toEnv(map[string]string{
-<span id="L77" class="ln">    77  </span>			&#34;GOBIN&#34;: gobin,
-<span id="L78" class="ln">    78  </span>		})...)
-<span id="L79" class="ln">    79  </span>		err := args.App.runCmd(cmd)
-<span id="L80" class="ln">    80  </span>		return args, errors.WithMessage(err, formatCmd(cmd))
-<span id="L81" class="ln">    81  </span>	}).
-<span id="L82" class="ln">    82  </span>	Append(func(args buildAtPathArgs) (buildAtPathArgs, string, bool, error) {
-<span id="L83" class="ln">    83  </span>		binaryPath, found, err := findBinary(args.App.fs, args.InstallDir)
-<span id="L84" class="ln">    84  </span>		return args, binaryPath, found, err
-<span id="L85" class="ln">    85  </span>	}).
-<span id="L86" class="ln">    86  </span>	Append(func(args buildAtPathArgs, binaryPath string, found bool) (buildAtPathArgs, string, error) {
-<span id="L87" class="ln">    87  </span>		return args, binaryPath, pipe.CheckError(!found,
-<span id="L88" class="ln">    88  </span>			errors.Errorf(&#34;go install result not found at path: %s&#34;, args.InstallDir))
-<span id="L89" class="ln">    89  </span>	}).
-<span id="L90" class="ln">    90  </span>	Append(func(args buildAtPathArgs, binaryPath string) error {
-<span id="L91" class="ln">    91  </span>		if binaryPath != args.DesiredPath {
-<span id="L92" class="ln">    92  </span>			return hackpadfs.Rename(args.App.fs, binaryPath, args.DesiredPath)
-<span id="L93" class="ln">    93  </span>		}
-<span id="L94" class="ln">    94  </span>		return nil
-<span id="L95" class="ln">    95  </span>	})
-<span id="L96" class="ln">    96  </span>
-<span id="L97" class="ln">    97  </span>func (a App) buildAtPath(ctx context.Context, name string, pkg Package, desiredPath string) error {
-<span id="L98" class="ln">    98  </span>	_, err := buildAtPathPipe.Do(buildAtPathArgs{
-<span id="L99" class="ln">    99  </span>		App:         a,
-<span id="L100" class="ln">   100  </span>		Context:     ctx,
-<span id="L101" class="ln">   101  </span>		DesiredPath: desiredPath,
-<span id="L102" class="ln">   102  </span>		InstallDir:  a.packageInstallDir(name),
-<span id="L103" class="ln">   103  </span>		Package:     pkg,
-<span id="L104" class="ln">   104  </span>	})
-<span id="L105" class="ln">   105  </span>	if err == nil {
-<span id="L106" class="ln">   106  </span>		fmt.Fprintln(a.errWriter, &#34;Build successful.&#34;)
-<span id="L107" class="ln">   107  </span>	}
-<span id="L108" class="ln">   108  </span>	return errors.Unwrap(err)
-<span id="L109" class="ln">   109  </span>}
-<span id="L110" class="ln">   110  </span>
-<span id="L111" class="ln">   111  </span><span class="comment">// findBinary returns the first regular file in the directory listing</span>
-<span id="L112" class="ln">   112  </span>func findBinary(fs hackpadfs.FS, installDir string) (string, bool, error) {
-<span id="L113" class="ln">   113  </span>	dirEntries, err := hackpadfs.ReadDir(fs, installDir)
-<span id="L114" class="ln">   114  </span>	if err != nil &amp;&amp; !errors.Is(err, hackpadfs.ErrNotExist) {
-<span id="L115" class="ln">   115  </span>		return &#34;&#34;, false, err
-<span id="L116" class="ln">   116  </span>	}
-<span id="L117" class="ln">   117  </span>	for _, entry := range dirEntries {
-<span id="L118" class="ln">   118  </span>		if entry.Type().IsRegular() {
-<span id="L119" class="ln">   119  </span>			return path.Join(installDir, entry.Name()), true, nil
-<span id="L120" class="ln">   120  </span>		}
-<span id="L121" class="ln">   121  </span>	}
-<span id="L122" class="ln">   122  </span>	return &#34;&#34;, false, nil
-<span id="L123" class="ln">   123  </span>}
-<span id="L124" class="ln">   124  </span>
-<span id="L125" class="ln">   125  </span>func (a App) shouldRebuild(binaryInfo hackpadfs.FileInfo, pkg Package) (bool, error) {
-<span id="L126" class="ln">   126  </span>	filePath, isFilePath := a.packageFilePath(pkg)
-<span id="L127" class="ln">   127  </span>	if !isFilePath {
-<span id="L128" class="ln">   128  </span>		<span class="comment">// remote module, assume up-to-date</span>
-<span id="L129" class="ln">   129  </span>		return false, nil
-<span id="L130" class="ln">   130  </span>	}
-<span id="L131" class="ln">   131  </span>
-<span id="L132" class="ln">   132  </span>	<span class="comment">// local module, find out if the build is stale</span>
-<span id="L133" class="ln">   133  </span>	binaryModTime := binaryInfo.ModTime()
-<span id="L134" class="ln">   134  </span>	fsPath, err := a.fromOSPath(filePath)
-<span id="L135" class="ln">   135  </span>	if err != nil {
-<span id="L136" class="ln">   136  </span>		return false, err
-<span id="L137" class="ln">   137  </span>	}
-<span id="L138" class="ln">   138  </span>	moduleRoot, err := moduleRoot(a.fs, fsPath)
-<span id="L139" class="ln">   139  </span>	if err != nil {
-<span id="L140" class="ln">   140  </span>		return false, err
-<span id="L141" class="ln">   141  </span>	}
-<span id="L142" class="ln">   142  </span>	return hasNewerModTime(a.fs, moduleRoot, binaryModTime)
-<span id="L143" class="ln">   143  </span>}
-<span id="L144" class="ln">   144  </span>
-<span id="L145" class="ln">   145  </span>func moduleRoot(fs hackpadfs.FS, p string) (string, error) {
-<span id="L146" class="ln">   146  </span>	const goMod = &#34;go.mod&#34;
-<span id="L147" class="ln">   147  </span>	_, err := hackpadfs.Stat(fs, path.Join(p, goMod))
-<span id="L148" class="ln">   148  </span>	if err == nil {
-<span id="L149" class="ln">   149  </span>		return p, nil
-<span id="L150" class="ln">   150  </span>	}
-<span id="L151" class="ln">   151  </span>	parentPath := path.Dir(p)
-<span id="L152" class="ln">   152  </span>	if parentPath == p {
-<span id="L153" class="ln">   153  </span>		return &#34;&#34;, errors.Errorf(&#34;go.mod not found for package: %q&#34;, p)
-<span id="L154" class="ln">   154  </span>	}
-<span id="L155" class="ln">   155  </span>	root, parentErr := moduleRoot(fs, parentPath)
-<span id="L156" class="ln">   156  </span>	if parentErr != nil {
-<span id="L157" class="ln">   157  </span>		<span class="comment">// if parent also failed to find module, return original error</span>
-<span id="L158" class="ln">   158  </span>		return &#34;&#34;, err
-<span id="L159" class="ln">   159  </span>	}
-<span id="L160" class="ln">   160  </span>	return root, nil
-<span id="L161" class="ln">   161  </span>}
-<span id="L162" class="ln">   162  </span>
-<span id="L163" class="ln">   163  </span>func hasNewerModTime(fs hackpadfs.FS, root string, baseModTime time.Time) (bool, error) {
-<span id="L164" class="ln">   164  </span>	hasNewerModTime := false
-<span id="L165" class="ln">   165  </span>	err := hackpadfs.WalkDir(fs, root, func(path string, d hackpadfs.DirEntry, err error) error {
-<span id="L166" class="ln">   166  </span>		if hasNewerModTime {
-<span id="L167" class="ln">   167  </span>			return hackpadfs.SkipDir
-<span id="L168" class="ln">   168  </span>		}
-<span id="L169" class="ln">   169  </span>		if err != nil || path == root {
-<span id="L170" class="ln">   170  </span>			return err
-<span id="L171" class="ln">   171  </span>		}
-<span id="L172" class="ln">   172  </span>		info, err := d.Info()
-<span id="L173" class="ln">   173  </span>		if err != nil {
-<span id="L174" class="ln">   174  </span>			return err
-<span id="L175" class="ln">   175  </span>		}
-<span id="L176" class="ln">   176  </span>		modTime := info.ModTime()
-<span id="L177" class="ln">   177  </span>		if modTime.After(baseModTime) {
-<span id="L178" class="ln">   178  </span>			hasNewerModTime = true
-<span id="L179" class="ln">   179  </span>			return hackpadfs.SkipDir
-<span id="L180" class="ln">   180  </span>		}
-<span id="L181" class="ln">   181  </span>		return nil
-<span id="L182" class="ln">   182  </span>	})
-<span id="L183" class="ln">   183  </span>	return hasNewerModTime, err
-<span id="L184" class="ln">   184  </span>}
-<span id="L185" class="ln">   185  </span>
+<span id="L77" class="ln">    77  </span>			&#34;GOARCH&#34;: &#34;&#34;,
+<span id="L78" class="ln">    78  </span>			&#34;GOBIN&#34;:  gobin,
+<span id="L79" class="ln">    79  </span>			&#34;GOOS&#34;:   &#34;&#34;,
+<span id="L80" class="ln">    80  </span>		})...)
+<span id="L81" class="ln">    81  </span>		err := args.App.runCmd(cmd)
+<span id="L82" class="ln">    82  </span>		return args, errors.WithMessage(err, formatCmd(cmd))
+<span id="L83" class="ln">    83  </span>	}).
+<span id="L84" class="ln">    84  </span>	Append(func(args buildAtPathArgs) (buildAtPathArgs, string, bool, error) {
+<span id="L85" class="ln">    85  </span>		binaryPath, found, err := findBinary(args.App.fs, args.InstallDir)
+<span id="L86" class="ln">    86  </span>		return args, binaryPath, found, err
+<span id="L87" class="ln">    87  </span>	}).
+<span id="L88" class="ln">    88  </span>	Append(func(args buildAtPathArgs, binaryPath string, found bool) (buildAtPathArgs, string, error) {
+<span id="L89" class="ln">    89  </span>		return args, binaryPath, pipe.CheckError(!found,
+<span id="L90" class="ln">    90  </span>			errors.Errorf(&#34;go install result not found at path: %s&#34;, args.InstallDir))
+<span id="L91" class="ln">    91  </span>	}).
+<span id="L92" class="ln">    92  </span>	Append(func(args buildAtPathArgs, binaryPath string) error {
+<span id="L93" class="ln">    93  </span>		if binaryPath != args.DesiredPath {
+<span id="L94" class="ln">    94  </span>			return hackpadfs.Rename(args.App.fs, binaryPath, args.DesiredPath)
+<span id="L95" class="ln">    95  </span>		}
+<span id="L96" class="ln">    96  </span>		return nil
+<span id="L97" class="ln">    97  </span>	})
+<span id="L98" class="ln">    98  </span>
+<span id="L99" class="ln">    99  </span>func (a App) buildAtPath(ctx context.Context, name string, pkg Package, desiredPath string) error {
+<span id="L100" class="ln">   100  </span>	_, err := buildAtPathPipe.Do(buildAtPathArgs{
+<span id="L101" class="ln">   101  </span>		App:         a,
+<span id="L102" class="ln">   102  </span>		Context:     ctx,
+<span id="L103" class="ln">   103  </span>		DesiredPath: desiredPath,
+<span id="L104" class="ln">   104  </span>		InstallDir:  a.packageInstallDir(name),
+<span id="L105" class="ln">   105  </span>		Package:     pkg,
+<span id="L106" class="ln">   106  </span>	})
+<span id="L107" class="ln">   107  </span>	if err == nil {
+<span id="L108" class="ln">   108  </span>		fmt.Fprintln(a.errWriter, &#34;Build successful.&#34;)
+<span id="L109" class="ln">   109  </span>	}
+<span id="L110" class="ln">   110  </span>	return errors.Unwrap(err)
+<span id="L111" class="ln">   111  </span>}
+<span id="L112" class="ln">   112  </span>
+<span id="L113" class="ln">   113  </span><span class="comment">// findBinary returns the first regular file in the directory listing</span>
+<span id="L114" class="ln">   114  </span>func findBinary(fs hackpadfs.FS, installDir string) (string, bool, error) {
+<span id="L115" class="ln">   115  </span>	dirEntries, err := hackpadfs.ReadDir(fs, installDir)
+<span id="L116" class="ln">   116  </span>	if err != nil &amp;&amp; !errors.Is(err, hackpadfs.ErrNotExist) {
+<span id="L117" class="ln">   117  </span>		return &#34;&#34;, false, err
+<span id="L118" class="ln">   118  </span>	}
+<span id="L119" class="ln">   119  </span>	for _, entry := range dirEntries {
+<span id="L120" class="ln">   120  </span>		if entry.Type().IsRegular() {
+<span id="L121" class="ln">   121  </span>			return path.Join(installDir, entry.Name()), true, nil
+<span id="L122" class="ln">   122  </span>		}
+<span id="L123" class="ln">   123  </span>	}
+<span id="L124" class="ln">   124  </span>	return &#34;&#34;, false, nil
+<span id="L125" class="ln">   125  </span>}
+<span id="L126" class="ln">   126  </span>
+<span id="L127" class="ln">   127  </span>func (a App) shouldRebuild(binaryInfo hackpadfs.FileInfo, pkg Package) (bool, error) {
+<span id="L128" class="ln">   128  </span>	filePath, isFilePath := a.packageFilePath(pkg)
+<span id="L129" class="ln">   129  </span>	if !isFilePath {
+<span id="L130" class="ln">   130  </span>		<span class="comment">// remote module, assume up-to-date</span>
+<span id="L131" class="ln">   131  </span>		return false, nil
+<span id="L132" class="ln">   132  </span>	}
+<span id="L133" class="ln">   133  </span>
+<span id="L134" class="ln">   134  </span>	<span class="comment">// local module, find out if the build is stale</span>
+<span id="L135" class="ln">   135  </span>	binaryModTime := binaryInfo.ModTime()
+<span id="L136" class="ln">   136  </span>	fsPath, err := a.fromOSPath(filePath)
+<span id="L137" class="ln">   137  </span>	if err != nil {
+<span id="L138" class="ln">   138  </span>		return false, err
+<span id="L139" class="ln">   139  </span>	}
+<span id="L140" class="ln">   140  </span>	moduleRoot, err := moduleRoot(a.fs, fsPath)
+<span id="L141" class="ln">   141  </span>	if err != nil {
+<span id="L142" class="ln">   142  </span>		return false, err
+<span id="L143" class="ln">   143  </span>	}
+<span id="L144" class="ln">   144  </span>	return hasNewerModTime(a.fs, moduleRoot, binaryModTime)
+<span id="L145" class="ln">   145  </span>}
+<span id="L146" class="ln">   146  </span>
+<span id="L147" class="ln">   147  </span>func moduleRoot(fs hackpadfs.FS, p string) (string, error) {
+<span id="L148" class="ln">   148  </span>	const goMod = &#34;go.mod&#34;
+<span id="L149" class="ln">   149  </span>	_, err := hackpadfs.Stat(fs, path.Join(p, goMod))
+<span id="L150" class="ln">   150  </span>	if err == nil {
+<span id="L151" class="ln">   151  </span>		return p, nil
+<span id="L152" class="ln">   152  </span>	}
+<span id="L153" class="ln">   153  </span>	parentPath := path.Dir(p)
+<span id="L154" class="ln">   154  </span>	if parentPath == p {
+<span id="L155" class="ln">   155  </span>		return &#34;&#34;, errors.Errorf(&#34;go.mod not found for package: %q&#34;, p)
+<span id="L156" class="ln">   156  </span>	}
+<span id="L157" class="ln">   157  </span>	root, parentErr := moduleRoot(fs, parentPath)
+<span id="L158" class="ln">   158  </span>	if parentErr != nil {
+<span id="L159" class="ln">   159  </span>		<span class="comment">// if parent also failed to find module, return original error</span>
+<span id="L160" class="ln">   160  </span>		return &#34;&#34;, err
+<span id="L161" class="ln">   161  </span>	}
+<span id="L162" class="ln">   162  </span>	return root, nil
+<span id="L163" class="ln">   163  </span>}
+<span id="L164" class="ln">   164  </span>
+<span id="L165" class="ln">   165  </span>func hasNewerModTime(fs hackpadfs.FS, root string, baseModTime time.Time) (bool, error) {
+<span id="L166" class="ln">   166  </span>	hasNewerModTime := false
+<span id="L167" class="ln">   167  </span>	err := hackpadfs.WalkDir(fs, root, func(path string, d hackpadfs.DirEntry, err error) error {
+<span id="L168" class="ln">   168  </span>		if hasNewerModTime {
+<span id="L169" class="ln">   169  </span>			return hackpadfs.SkipDir
+<span id="L170" class="ln">   170  </span>		}
+<span id="L171" class="ln">   171  </span>		if err != nil || path == root {
+<span id="L172" class="ln">   172  </span>			return err
+<span id="L173" class="ln">   173  </span>		}
+<span id="L174" class="ln">   174  </span>		info, err := d.Info()
+<span id="L175" class="ln">   175  </span>		if err != nil {
+<span id="L176" class="ln">   176  </span>			return err
+<span id="L177" class="ln">   177  </span>		}
+<span id="L178" class="ln">   178  </span>		modTime := info.ModTime()
+<span id="L179" class="ln">   179  </span>		if modTime.After(baseModTime) {
+<span id="L180" class="ln">   180  </span>			hasNewerModTime = true
+<span id="L181" class="ln">   181  </span>			return hackpadfs.SkipDir
+<span id="L182" class="ln">   182  </span>		}
+<span id="L183" class="ln">   183  </span>		return nil
+<span id="L184" class="ln">   184  </span>	})
+<span id="L185" class="ln">   185  </span>	return hasNewerModTime, err
+<span id="L186" class="ln">   186  </span>}
+<span id="L187" class="ln">   187  </span>
 </pre><p></p>
 
 <div id="footer">
