--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main.go.html
@@ -92,7 +92,7 @@
 <span id="L35" class="ln">    35  </span>		return err
 <span id="L36" class="ln">    36  </span>	}
 <span id="L37" class="ln">    37  </span>
-<span id="L38" class="ln">    38  </span>	const genDocPerm = 0644
+<span id="L38" class="ln">    38  </span>	const genDocPerm = 0o644
 <span id="L39" class="ln">    39  </span>	f, err := os.OpenFile(outPath, os.O_CREATE|os.O_TRUNC|os.O_WRONLY, genDocPerm)
 <span id="L40" class="ln">    40  </span>	if err != nil {
 <span id="L41" class="ln">    41  </span>		return err
