--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/file_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/file_test.go.html
@@ -71,7 +71,7 @@
 <span id="L14" class="ln">    14  </span>func testFile(t *testing.T, contents string) string {
 <span id="L15" class="ln">    15  </span>	t.Helper()
 <span id="L16" class="ln">    16  </span>	p := filepath.Join(t.TempDir(), &#34;file&#34;)
-<span id="L17" class="ln">    17  </span>	err := os.WriteFile(p, []byte(contents), 0600)
+<span id="L17" class="ln">    17  </span>	err := os.WriteFile(p, []byte(contents), 0o600)
 <span id="L18" class="ln">    18  </span>	if err != nil {
 <span id="L19" class="ln">    19  </span>		t.Fatal(err)
 <span id="L20" class="ln">    20  </span>	}
