--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/generate.go.html
@@ -86,8 +86,8 @@
 <span id="L29" class="ln">    29  </span>)
 <span id="L30" class="ln">    30  </span>
 <span id="L31" class="ln">    31  </span>const (
-<span id="L32" class="ln">    32  </span>	scrapeDirPermission  = 0700
-<span id="L33" class="ln">    33  </span>	scrapeFilePermission = 0600
+<span id="L32" class="ln">    32  </span>	scrapeDirPermission  = 0o700
+<span id="L33" class="ln">    33  </span>	scrapeFilePermission = 0o600
 <span id="L34" class="ln">    34  </span>)
 <span id="L35" class="ln">    35  </span>
 <span id="L36" class="ln">    36  </span>var (
